[gd_scene load_steps=30 format=2]

[ext_resource path="res://sprites/menu_inicial_itens/agent1.png" type="Texture" id=1]
[ext_resource path="res://sprites/menu_fases_itens/novo botao.png" type="Texture" id=2]
[ext_resource path="res://sprites/menu_fases_itens/button_hover.png" type="Texture" id=3]
[ext_resource path="res://sprites/mazedown_logo.png" type="Texture" id=4]
[ext_resource path="res://fonts/BebasNeue-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/menu_inicial_itens/lab5.png" type="Texture" id=6]
[ext_resource path="res://scripts/stage_menu.gd" type="Script" id=7]
[ext_resource path="res://scenes/efeitos/scene_transition.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/menu_inicial_itens/lab7.png" type="Texture" id=9]
[ext_resource path="res://sprites/menu_inicial_itens/lab3.png" type="Texture" id=10]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://sprites/menu_inicial_itens/lab9.png" type="Texture" id=13]
[ext_resource path="res://sprites/menu_inicial_itens/lab2.png" type="Texture" id=14]
[ext_resource path="res://sprites/menu_inicial_itens/lab1.png" type="Texture" id=15]
[ext_resource path="res://sprites/menu_inicial_itens/lab6.png" type="Texture" id=16]
[ext_resource path="res://sprites/menu_inicial_itens/lab4.png" type="Texture" id=17]
[ext_resource path="res://sprites/menu_fases_itens/button_pressed.png" type="Texture" id=18]
[ext_resource path="res://sprites/menu_inicial_itens/lab8.png" type="Texture" id=19]
[ext_resource path="res://sprites/menu_inicial_itens/agent2.png" type="Texture" id=22]
[ext_resource path="res://sprites/menu_inicial_itens/agent3.png" type="Texture" id=23]
[ext_resource path="res://sprites/menu_inicial_itens/agent5.png" type="Texture" id=24]
[ext_resource path="res://sprites/menu_inicial_itens/agent4.png" type="Texture" id=25]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 11 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="Animation" id=5]
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("mazedown:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.4, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 256, -65.993 ), Vector2( 257, -66.232 ), Vector2( 256, -66.058 ), Vector2( 255, -65.859 ), Vector2( 256, 47.057 ), Vector2( 255, 53.692 ), Vector2( 256, 55 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mazedown:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 9.6, 9.6, -1.1 ]
}

[sub_resource type="Animation" id=6]
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("mazedown:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.65, 1.45, 2.1, 2.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -1.1, 0.0, 3.0, 0.0, -3.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mazedown:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.55, 1.25, 2, 2.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.37, 0.37 ), Vector2( 0.32, 0.32 ), Vector2( 0.3, 0.3 ), Vector2( 0.28, 0.28 ), Vector2( 0.28, 0.28 ) ]
}

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 9 ), ExtResource( 19 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="main" type="Node"]
script = ExtResource( 7 )
__meta__ = {
"_edit_vertical_guides_": [ 256.405 ]
}

[node name="hud" type="CanvasLayer" parent="."]

[node name="scene_transition" parent="hud" instance=ExtResource( 8 )]
visible = false

[node name="btn_start" type="TextureButton" parent="hud"]
margin_left = 221.223
margin_top = 185.473
margin_right = 672.223
margin_bottom = 345.473
rect_scale = Vector2( 0.15, 0.25 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Label" parent="hud"]
margin_left = 199.436
margin_top = 171.013
margin_right = 317.437
margin_bottom = 242.013
custom_fonts/font = SubResource( 1 )
text = "START"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_quit" type="TextureButton" parent="hud"]
margin_left = 221.679
margin_top = 222.833
margin_right = 672.679
margin_bottom = 382.833
rect_scale = Vector2( 0.15, 0.25 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="hud"]
margin_left = 199.193
margin_top = 208.732
margin_right = 317.193
margin_bottom = 279.732
custom_fonts/font = SubResource( 1 )
text = "quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textos" type="Node2D" parent="hud"]
modulate = Color( 1, 1, 1, 0.133333 )

[node name="a game by" type="Label" parent="hud/textos"]
margin_left = 107.711
margin_top = 275.0
margin_right = 174.711
margin_bottom = 289.0
custom_fonts/font = SubResource( 2 )
text = "A game by"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio by" type="Label" parent="hud/textos"]
margin_left = 262.976
margin_top = 275.0
margin_right = 329.976
margin_bottom = 289.0
custom_fonts/font = SubResource( 2 )
text = "Audio by"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="publish" type="Label" parent="hud/textos"]
margin_left = 340.0
margin_top = 275.0
margin_right = 407.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 2 )
text = "Publish by"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anderson" type="Label" parent="hud/textos"]
margin_left = 155.779
margin_top = 272.0
margin_right = 282.779
margin_bottom = 286.0
custom_fonts/font = SubResource( 3 )
text = "Anderson Alvarenga."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="empty" type="Label" parent="hud/textos"]
margin_left = 303.0
margin_top = 272.0
margin_right = 430.0
margin_bottom = 286.0
custom_fonts/font = SubResource( 3 )
text = "Empty."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="empty2" type="Label" parent="hud/textos"]
margin_left = 387.0
margin_top = 272.0
margin_right = 514.0
margin_bottom = 286.0
custom_fonts/font = SubResource( 3 )
text = "Empty."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprites" type="Node2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="sprites"]
position = Vector2( 256.19, 125.364 )
scale = Vector2( 2, 2 )
z_index = 10
frames = SubResource( 4 )
frame = 1
playing = true

[node name="mazedown" type="Sprite" parent="sprites"]
position = Vector2( 255.667, 54.564 )
rotation = -0.000523611
scale = Vector2( 0.3, 0.3 )
z_index = 10
texture = ExtResource( 4 )

[node name="anim" type="AnimationPlayer" parent="sprites"]
playback_speed = 0.4
anims/intro = SubResource( 5 )
anims/logo_efeito = SubResource( 6 )

[node name="mata" type="AnimatedSprite" parent="sprites"]
position = Vector2( 256, 144 )
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
frame = 6
playing = true

[connection signal="pressed" from="hud/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="hud/btn_quit" to="." method="_on_btn_quit_pressed"]
[connection signal="animation_finished" from="sprites/anim" to="." method="_on_AnimationPlayer_animation_finished"]
